# spot_choreo_utils

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  gitman.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml
choreo_files/: .gitignore
docker/: Dockerfile  entrypoint.sh  start_docker.py
spot_choreo_utils/api/: spot_animator_connector.py
spot_choreo_utils/frontend/src/: App.jsx
spot_choreo_utils/web_animator/: pyproject.toml
spot_choreo_utils/web_animator/spot_web_animator/: animate.py  requirements.in
spot_choreo_utils/web_animator/spot_web_animator/animation_backend/: web_animator_backend.py  web_animator_drake_ui.py  web_animator_serializer.py
spot_choreo_utils/web_animator/spot_web_animator/systems/: helpers.py  spot.py
spot_choreo_utils/web_animator/spot_web_animator/systems/config/: joint_configurations.yaml
spot_choreo_utils/web_animator/spot_web_animator/systems/models/: __init__.py
spot_choreo_utils/web_animator/spot_web_animator/systems/models/spot/: joint_configurations.yaml  package.xml
spot_choreo_utils/web_animator/spot_web_animator/systems/models/spot/meshes/arm/visual/: arm_link_el0.mtl  arm_link_wr0.mtl  arm_link_wr1.mtl
spot_choreo_utils/web_animator/spot_web_animator/systems/models/spot/meshes/base/visual/: body.mtl  rear_left_upper_leg.mtl
spot_choreo_utils/web_animator/spot_web_animator/systems/models/spot/meshes/gripper/visual/: arm_link_fngr.mtl
spot_choreo_utils/web_animator/spot_web_animator/systems/models/spot/urdf/: spot.urdf  spot_arm.urdf  spot_gripper.urdf
tutorials/: .gitignore  00_build_and_play_bosdyn.ipynb  01_intro_to_builders.ipynb  02_synced_dance_playback.ipynb  03_pose_to_pose_with_robot.ipynb  04_semantic_animation_example.ipynb  05_composing_a_complete_synced_dance.ipynb
(+34 files in other folders)
