# Copyright (c) 2024-2025  Boston Dynamics AI Institute LLC. All rights reserved.

[build-system]
requires = ["setuptools>=6.10"]
build-backend = "setuptools.build_meta"

[project]
name = "spot_choreo_utils"
version = "0.1.0"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["spot_choreo_utils"]


[tool.pytest.ini_options]
norecursedirs = ["external"]


[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`)
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docker/ros",
]
line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
force-exclude = '''
/(
)/
'''
preview = true
