# Copyright (c) 2025 Boston Dynamics AI Institute LLC. All rights reserved.

[build-system]
requires = ["setuptools>=69.5.1", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-web-animator"
version = "0.0.1"
description = "Spot Web Animator"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}

[tool.setuptools.packages.find]
include = ["spot_web_animator"]
